--- a/mongodb/manifest.yml
+++ b/mongodb/manifest.yml
@@ -27,3 +27,22 @@ spec:
       containers:
       - name: mongodb
         image: iamrams/mongodb:v1
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongodb
+  namespace: roboshop
+  labels:
+    component: mongodb
+    project: roboshop
+    tier: backend
+spec:
+  selector:
+    component: mongodb
+    project: roboshop
+    tier: backend
+  ports:
+    - protocol: TCP
+      port: 27017 # service port
+      targetPort: 27017 # container port
