--- a/catalogue/manifest.yml
+++ b/catalogue/manifest.yml
@@ -1,48 +1,48 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongodb
+  name: catalogue
   namespace: roboshop
   # deployment labels
   labels:
-    component: mongodb
+    component: catalogue
     project: roboshop
-    tier: database
+    tier: app
 spec:
   replicas: 1
   # These are the labels replica set use to create pod replicas, this should match pod labels
   selector:
     matchLabels:
-      component: mongodb
+      component: catalogue
       project: roboshop
-      tier: database
+      tier: app
   # This is pod definition
   template:
     metadata:
       labels:
-        component: mongodb
+        component: catalogue
         project: roboshop
-        tier: database
+        tier: app
     spec:
       containers:
-      - name: mongodb
-        image: iamrams/mongodb:v1
+      - name: catalogue
+        image: iamrams/catalogue:v1
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongodb
+  name: catalogue
   namespace: roboshop
   labels:
-    component: mongodb
+    component: catalogue
     project: roboshop
-    tier: database
+    tier: app
 spec:
   selector:
-    component: mongodb
+    component: catalogue
     project: roboshop
-    tier: database
+    tier: app
   ports:
   - protocol: TCP
-    port: 27017 # service port
-    targetPort: 27017 # container port
+    port: 8080 # service port
+    targetPort: 8080 # container port
